[tool.poetry]
name = "cloudrun-example-api"
version = "0.1.0"
description = ""
authors = ["Florian Maas <fpgmaas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
